join_outer.test, join_outer.result:   Added test cases for bug #9938. item.h:   Fixed bug #9938: missing method not_null_tables for Item_ref.

sql/item.h:
  Fixed bug #9938: missing method not_null_tables for Item_ref.
mysql-test/t/join_outer.test:
  Added test cases for bug #9938.